--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           cd terraform
           terraform init
-          terraform destroy -auto-approve
+          terraform apply -auto-approve
 
       - name: Login to Amazon ECR
         id: login-ecr
