--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,28 @@
 events {}
 
 http {
+    upstream app_upstream {
+        server app:3000;
+    }
+
     server {
         listen 80;
 
         location / {
-            proxy_pass http://127.0.0.1:3000;
+            proxy_pass http://app_upstream;
             proxy_http_version 1.1;
 
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /health {
+            proxy_pass http://app_upstream/health;
+            proxy_http_version 1.1;
+
+            proxy_set_header Host $host;
         }
     }
 }
